# kraken-applications

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: index.md  schema.json
docs/best-practices/: general.md
docs/examples/: backup-appliances.md  basic.md  gpu.md  kubernetes.md  linux.md  multi-vm.md  windows.md
docs/getting-started/: installation.md  overview.md  quickstart.md
docs/includes/: abbreviations.md
docs/javascripts/: extra.js
docs/spec/: assets.md  cloud-init.md  metadata.md  overview.md  resources.md  schema.md  virdomain.md
docs/stylesheets/: extra.css
k3s-single-node/: manifest.yaml
linux-template/: manifest.yaml
multi-virdomain-template/: manifest.yaml
simple-virdomain/: manifest.yaml
single-node-k3s/: manifest.yaml
small-iso/: manifest.yaml
window-template/: manifest.yaml
yolo-object-detection/: manifest.yaml
